--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/styles.css">
+  <script src="https://kit.fontawesome.com/4a4be6c666.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./src/index.css">
   <title>Vite + React</title>
 </head>
 
