--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/src/assets/Captura de pantalla 2023-04-19 151017.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <script src="https://kit.fontawesome.com/4a4be6c666.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./src/index.css">
-  <title>Vite + React</title>
+  <title>POTAFOLIO</title>
 </head>
 
 <body>
